							   -*- coding: utf-8 -*-
			     BZFlag Release Notes                           
			     ====================


BZFlag 2.1.x
------------

* wings more realistic now only adding to current velocity - Phillip Vaxorcist
* fixed issues on some SMP Linux systems due to bad timekeeping - A. W. Wright
* fixed bug where players sometimes received duplicate messages - Joshua Bodine
* New font system - Sean Morrison, Jeff Meyers
* Fixed framerate jitter-inducing bug on SMP systems - Sean Morrison
* First map no longer ignored in Start Server menu - Ravu al Hemio
* Check for talk permission for part/quit messages  - uso
* Implemented Confine Mouse for Windows platforms - Daniel Remenak
* Implemented fullscreen->windowed mode toggle on Windows - Daniel Remenak
* Add -filterAnnounce server option - Bernt Hansen
* framerate independent keyboard turn dampening - Sean Morrison, randomparticle
* Added new bzfs -botsPerIP option to limit bot connections - Sean Morrison
* Updated zlib to version 1.2.3 - Sean Morrison
* Anti-aliased rendering option - Snick
* Added bzfscron plugin to execute commands on time intervals - Daniel Remenak
* Removed original BSD advertising clause from 3rd party code - Sean Morrison
* Polish language filter updates - harry666t
* increased joystick button support to 32 buttons - Markus
* Added a new optional height check - Thomas Stauer
* Added optional delay before the countdown gets resumed - Thomas Stauer
* Add -tkannounce server option - Bernt Hansen
* Fixed map line ending parse bug for flag zones - Jeff Myers
* Add client statistics output option - Daniel Remenak
* Add full support for Xfire on Windows - Daniel Remenak
* added a new /calc command, in-game calculator - Ian Agar
* added a new /gamestats command - Petteri Aimonen, Sean Morrison
* player accounting bug fix to bzfquery - Geoffrey Sneddon
* initial native HPUX platform support - Thomas Matelich
* Added optional direction shot line to radar - Stephan Hradek